# Ohjelmistotekniikka

./: README.md
dokumentaatio/: vaatimusmaarittely.md
harjoitustyö/: pyproject.toml  tyoaikakirjanpito.md
laskarit/viikko2/: .coverage  pyproject.toml
laskarit/viikko2/src/: maksukortti.py
laskarit/viikko2/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
